Landing page anchor tag extension fixed
- Fixed issue with the anchor tag extension out of the box
- Also updated react-scripts to 5.0.1
- Broken images due to the update is fixed by importing the images instead of using require()

--- a/src/components/css/hero.css
+++ b/src/components/css/hero.css
@@ -88,10 +88,12 @@
   max-width: 650px !important;
   padding: 12px;
 }
+
 .hero {
   max-width: 1350px;
   margin: 30px auto;
 }
+
 .row {
   max-width: 1350px;
   display: flex;
@@ -140,7 +142,8 @@
 }
 
 .text_info,
-.btn_readmore, .btn_ca {
+.btn_readmore,
+.btn_ca {
   margin-top: 30px;
 }
 
@@ -186,6 +189,7 @@
   align-items: center;
   justify-content: left;
 }
+
 .right {
   display: flex;
   align-items: center;
@@ -224,10 +228,12 @@
     justify-content: center !important;
     max-width: 90vw !important;
   }
+
   .column1 {
     /* margin: 30px 0 0 0 ; */
     max-width: 90vw !important;
   }
+
   /* .corousal-slide {
     height: 100%;
     width: 100%;
@@ -241,14 +247,17 @@
 }
 
 @media (max-width: 390px) {
+
   .carousel,
   .slide {
     margin: 0 !important;
   }
+
   .row {
     max-width: 100vw !important;
     margin: 0 !important;
   }
+
   .column1 {
     padding: 0;
     margin: 0 !important;
@@ -259,8 +268,14 @@
   .readmore_ca {
     flex-direction: column;
   }
+
   .btn_ca {
     margin-top: 10px;
+  }
+
+  .buttons {
+    width: 100%;
+    display: flex;
   }
 }
 
